--- a/.github/workflows/nightly-tests.yml
+++ b/.github/workflows/nightly-tests.yml
@@ -74,7 +74,7 @@ jobs:
 
   install-jina-ecosystem-test:
     runs-on: ubuntu-latest
-    needs: lint-flake-8, code-injection
+    needs: flake8 
     strategy:
       fail-fast: false
     steps:
